# socket-service

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
model/: ClientRequest.h  SocketConnection.h
redisHandler/: RedisConsumer.cpp  RedisConsumer.h
server/: WebSocketServer.cpp  WebSocketServer.h  WebSocketSession.cpp  WebSocketSession.h
utils/: ConcurrentHashMap.h  GlobalMaps.cpp  GlobalMaps.h
